@@ -2,6 +2,10 @@
 
 * Updated to tzdata version 2008b
   (http://article.gmane.org/gmane.comp.time.tz/2149).
+* Support loading timezone data in Ruby 1.9.0. Use DateTime.new! if it is
+  available instead of DateTime.new0 when constructing transition times.
+  DateTime.new! was added in Ruby 1.8.6. DateTime.new0 was removed in
+  Ruby 1.9.0. Thanks to Joshua Peek for reporting this. Closes #17606.
 
 
 == Version 0.3.7 (tzdata v2008a) - 10-Mar-2008
